# py_lets_be_rational

./: .flake8  .gitignore  README.md  build.py  pyproject.toml
pylbr/: __init__.py  constants.py  exceptions.py  lets_be_rational.py  rationalcubic.py
tests/: create_test_values.py  test_profile_py_lets_be_rational.py  test_public_functions.py
