[tool.poetry]
name = "pylbr"
version = "0.1.0"
description = "Implementation of Peter Jaeckel's LetsBeRational."
authors = ["Blair Azzopardi <blairuk@gmail.com>"]
readme = "README.md"
packages = [{include = "pylbr"}]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.11.4"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


